Thu Oct  7 11:39:46 2004  Chad Elliott  <elliott_c@ociweb.com>

        * tests/Typedef_String_Array/client.cpp:
        * tests/Typedef_String_Array/run_test.pl:
        * tests/Typedef_String_Array/server.cpp:
        * tests/Typedef_String_Array/test.idl:
        * tests/Typedef_String_Array/testImpl.h:
        * tests/Typedef_String_Array/testImpl.cpp:
        * tests/Typedef_String_Array/typedef_string_array.mpc:

          Added a test for the following case:

           typedef string MyString;
           typedef MyString ArrayOfString[15];

          In the early 1.3.x days, the tao_idl compiler would not generate
          correct CDR operators that took into account the primitive base
          type of the array.

Thu Oct  7 11:25:51 2004  john_c  <john_c@ociweb>

        * TAO\tao\Object_KeyC.cpp:
          Extended 'decode_string_to_sequence' to successfully parse
          URL style IOR's generated from pre 1.4 TAO releases. Earlier
          the escape charecter was '\\' (currently '%').

Tue Oct  5 20:01:17 2004  Carlos O'Ryan  <coryan@atdesk.com>

        * tests/Sequence_Unit_Tests/string_traits_base.hpp:
          Some platforms apparently support bool, namespaces, templates
          but not wchar_t.  Sounds more likely that the platform supports
          wchar_t but the ACE configuration is out of date.  In any case,
          I tweaked the code so it would compile when ACE_HAS_WCHAR (and
          its sibling ACE_HAS_XPG4_MULTIBYTE_CHAR) are not defined.

Tue Oct  5 15:27:45 2004  Dale Wilson  <wilson_d@ociweb.com>

        * orbsvcs/orbsvcs/FtRtEvent/EventChannel/FTEC_ProxyConsumer.h:
        * orbsvcs/orbsvcs/FtRtEvent/EventChannel/Replication_Service.h:
        * orbsvcs/orbsvcs/FtRtEvent/EventChannel/Replication_Strategy.h:
          Build problems with exception=0
          Can't use ACE_ENV_ARG_DECL_WITH_DEFAULTS in function pointer typedef

Mon Oct  4 12:52:21 2004  Chad Elliott  <elliott_c@ociweb.com>
